<resources>
    <string name="app_name">Por Contrato</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="comencemos_creando_una_meta">Comencemos creando un objetivo</string>
    <string name="iniciar">Iniciar</string>
    <string name="nombre_de_la_meta">Nombre de la objetivo</string>
    <string name="meta">Objetivo a cumplir</string>
    <string name="guardar">Guardar</string>
    <string name="mis_metas">Mis objetivos</string>
    <string name="crear_meta">Crear objetivo</string>
    <string name="eliminar_meta">Eliminar Objetivo</string>
    <string name="editar_meta">Editar objetivo</string>
    <string name="nuevo_nombre">Nuevo nombre</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="nuevo_contrato">Nuevo contrato</string>
    <string name="confirm_delete">¿Seguro que desea eliminar su objetivo?</string>
    <string name="empty">Nombre vacio. </string>
    <string name="sin_metas">Sin objetivos</string>
    <string name="detalles_del_contrato">Detalles del contrato</string>
    <string name="contract_duration_in_days">Duración en días: %d</string>
    <string name="contract_details_of_target">Detalles del objetivo: %s</string>
    <string name="incomplete_data">Datos incompletos</string>
    <string name="welcome">Bienvenido</string>
    <string name="explanation">Tu meta consta de contratos con duración de 1, 3, 7 y 10 días, que cumplirás para convertirlos en hábitos.</string>
    <string name="reach_your_goals">Cumple tus metas creando contratos.</string>
    <string name="how_does_it_work">¿Cómo funciona?</string>
    <string name="first_contract">Día 1: Primer contrato</string>
    <string name="between_contracts">Entre contratos</string>
    <string name="read_text">Tomar 2 vasos de agua.</string>
    <string name="description">Podrás hacer ajustes para adaptarlos a tu ciclo diario.</string>
    <string name="second_day">Día 2: Segundo contrato</string>
    <string name="hidratations">Tomar 3 vasos de agua.</string>
    <string name="fifth_day">Día 5: Tercer contrato</string>
    <string name="twelfth_day">Día 12: Último contrato</string>
    <string name="final_day">Día 21</string>
    <string name="hidratation_fifth_day">Tomar 4 vasos de agua.</string>
    <string name="hidratation_twelfth_day">Tomar 5 vasos de agua.</string>
    <string name="hidratation_final_day">Felicidades, cumpliste tu objetivo.</string>
    <string name="example">Reto sugerido:</string>
    <plurals name="days_count">
        <item quantity="one">%d día</item>
        <item quantity="other">%d días</item>
    </plurals>
</resources>