<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.contract_holders.ContractItemsActivity">

        <TextView
            android:id="@+id/name_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            tools:text="Nombre de la meta" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_Contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"
            tools:listitem="@layout/view_holder_contract" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_goal_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nuevo_nombre"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/cambiar_nombre" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/eliminar_meta" />

    </LinearLayout>

</layout>